--- a/assets/package.json
+++ b/assets/package.json
@@ -5,6 +5,7 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "core-js": "^3.16.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html"
   },
